--- a/aliyun/云计算acp/2.对象存储OSS.md
+++ b/aliyun/云计算acp/2.对象存储OSS.md
@@ -61,6 +61,9 @@ https://help.aliyun.com/document_detail/31937.html
 > 目前OSS提供的防盗链方法主要有以下两种：
   * 设置Referer。该操作通过控制台和SDK均可进行，用户可根据自身需求进行选择。
   * 签名URL，适合习惯开发的用户。
+### 5.8.6 静态网站托管
+https://help.aliyun.com/document_detail/31939.html
+* 使用自定义域名访问OSS。
 # 6. SDK参考
 ## 6.2 JAVA
 ### 6.2.6 上传
@@ -119,6 +122,9 @@ https://help.aliyun.com/document_detail/32207.html
 https://help.aliyun.com/document_detail/32005.html
 AccessDenied	拒绝访问	403	原因及排除请参看权限问题及排查
 MethodNotAllowed	不支持的方法	405	以OSS不支持的操作来访问资源
+## 11.7 OSS防盗链（Referer）配置及错误排除
+https://help.aliyun.com/document_detail/44198.html
+* `OSS的Refer只支持白名单`， 暂时不支持黑名单。
 # 12. 常见问题
 ## 12.1 一般性问题
 1. [OSS存储容量是多少？](https://help.aliyun.com/knowledge_detail/39604.html)
@@ -142,3 +148,12 @@ MethodNotAllowed	不支持的方法	405	以OSS不支持的操作来访问资源
 * 对于非空的bucket，您可以使用以下方式删除：
   * 使用oss的生命周期异步删除Object，请参考这里，然后将bucket删除。
   * 直接调用 osscmd 的 deletewholebucket 接口进行删除，请参考这里。注意该命令十分危险，将会删除所有的数据，并且不可恢复。请慎重使用。
+## 12.10 文件管理
+https://help.aliyun.com/knowledge_detail/39631.html
+> 批量删除操作
+  * 您可以使用以下几种方法，批量删除文件（包括文件夹及子目录文件）
+    * OSSBrowser工具：使用OSSBrowser工具，勾选多个文件夹或文件，批量删除文件或文件夹
+    * OSS网页控制台：
+      * 您可以使用控制台，勾选文件夹或勾选多个文件，批量删除文件或文件夹
+      * 您可以使用控制台的碎片管理功能，批量删除碎片
+    * OSS SDK：使用OSS SDK中的批量删除接口（如JAVA SDK中OSSClient.deleteObjects），您可以参考SDK文档
