--- a/aliyun/云计算acp/4.负载均衡SLB.md
+++ b/aliyun/云计算acp/4.负载均衡SLB.md
@@ -17,8 +17,8 @@ https://help.aliyun.com/document_detail/27544.html
 * 七层采用Tengine实现负载均衡。Tengine是由淘宝网发起的Web服务器项目，它在Nginx的基础上，针对有大访问量的网站需求，添加了很多高级功能和特性。
 ## 2.3 功能概述
 https://help.aliyun.com/document_detail/32460.html
-> 调度算法
-  * 负载均衡支持轮询
+> 负载均衡支持的调度算法：
+  * 轮询
   * 加权轮询（WRR）
   * 加权最小连接数（WLC）
   * 一致性哈希（CH）调度算法。
