--- a/aliyun/云计算acp/态势感知.md
+++ b/aliyun/云计算acp/态势感知.md
@@ -1,4 +1,7 @@
 1. https://help.aliyun.com/product/28498.html
+态势感知提供的是一项SAAS服务，即在大规模云计算环境中，对那些能够引发网络安全态势发生变化的要素进行全面、快速和准确地捕获和分析。然后，把客户当前遇到的安全威胁与过去的威胁进行关联回溯和大数据分析，最终产出未来可能产生的安全事件的威胁风险，并提供一个体系化的安全解决方案。
+
+
 
 # 4 用户指南
 ## 4.6 漏洞管理
