--- a/program/python/python数据分析与机器学习实战/1.目录.md
+++ b/program/python/python数据分析与机器学习实战/1.目录.md
@@ -24,13 +24,13 @@
 课时18Pandas常用预处理方法11:11
 课时19Pandas自定义函数07:44
 课时20Series结构12:29
-章节4:Python数据可视化库-Matplotlib
+## 章节4:Python数据可视化库-Matplotlib
 课时21折线图绘制08:25
 课时22子图操作14:05
 课时23条形图与散点图10:12
 课时24柱形图与盒图10:17
 课时25细节设置06:13
-章节5:Python可视化库Seaborn
+## 章节5:Python可视化库Seaborn
 课时26Seaborn简介02:44
 课时27整体布局风格设置07:47
 课时28风格细节设置06:49
@@ -43,7 +43,7 @@
 课时35Facetgrid使用方法08:49
 课时36Facetgrid绘制多变量08:29
 课时37热度图绘制14:19
-章节6:K近邻算法实战
+## 章节6:K近邻算法实战
 课时38K近邻算法概述15:47
 课时39模型的评估10:39
 课时40数据预处理11:25
@@ -55,7 +55,7 @@
 课时45似然函数求解09:36
 课时46目标函数推导09:22
 课时47线性回归求解10:57
-章节8:梯度下降策略
+## 章节8:梯度下降策略
 课时48梯度下降原理11:42
 课时49梯度下降方法对比07:20
 课时50学习率对结果的影响06:09
@@ -67,7 +67,7 @@
 课时54完成梯度下降模块12:51
 课时55停止策略与梯度下降案例10:55
 课时56实验对比效果10:25
-章节11:项目实战-交易数据异常检测
+## 章节11:项目实战-交易数据异常检测
 课时57案例背景和目标08:32
 课时58样本不均衡解决方案10:18
 课时59下采样策略06:36
@@ -78,7 +78,7 @@
 课时64混淆矩阵08:53
 课时65逻辑回归阈值对结果的影响10:01
 课时66SMOTE样本生成策略15:51
-章节12:决策树算法
+## 章节12:决策树算法
 课时67决策树原理概述12:25
 课时68衡量标准-熵11:04
 课时69决策树构造实例10:09
@@ -89,7 +89,7 @@
 课时73决策树涉及参数11:09
 课时74树可视化与sklearn库简介18:14
 课时75sklearn参数选择11:46
-章节14:集成算法与随机森林
+## 章节14:集成算法与随机森林
 课时76集成算法-随机森林12:03
 课时77特征重要性衡量13:51
 课时78提升模型11:15
@@ -101,7 +101,7 @@
 课时83集成实例18:53
 课时84Stacking模型14:16
 课时85效果改进11:09
-章节16:贝叶斯算法
+## 章节16:贝叶斯算法
 课时86贝叶斯算法概述06:58
 课时87贝叶斯推导实例07:38
 课时88贝叶斯拼写纠错实例11:46
@@ -114,7 +114,7 @@
 课时94TF-IDF关键词提取13:28
 课时95LDA建模09:10
 课时96基于贝叶斯算法进行新闻分类14:53
-章节18:支持向量机
+## 章节18:支持向量机
 课时97支持向量机算法要解决的问06:00
 课时98距离的定义07:05
 课时99要优化的目标07:54
@@ -124,7 +124,7 @@
 课时103支持向量的作用07:53
 课时104软间隔问题06:00
 课时105核函数问题11:56
-章节19:案例：SVM调参实例
+## 章节19:案例：SVM调参实例
 课时106sklearn求解支持向量机11:24
 课时107SVM参数选择14:00
 章节20:聚类算法-Kmeans
@@ -132,7 +132,7 @@
 课时109KMEANS工作流程09:42
 课时110KMEANS迭代可视化展示08:20
 课时111使用Kmeans进行图像压缩07:58
-章节21:聚类算法-DBSCAN
+## 章节21:聚类算法-DBSCAN
 课时112DBSCAN聚类算法11:04
 课时113DBSCAN工作流程15:03
 课时114DBSCAN可视化展示08:52
@@ -144,7 +144,7 @@
 课时118PCA要优化的目标12:22
 课时119PCA求解10:18
 课时120PCA实例08:34
-章节24:神经网络
+## 章节24:神经网络
 课时121初识神经网络11:28
 课时122计算机视觉所面临的挑战09:40
 课时123K近邻尝试图像分类10:01
@@ -160,7 +160,7 @@
 课时133神经网络实例演示10:39
 课时134神经网络过拟合解决方案15:54
 课时135感受神经网络的强大11:30
-章节25:Xgboost集成算法
+## 章节25:Xgboost集成算法
 课时136集成算法思想05:35
 课时137xgboost基本原理11:07
 课时138xgboost目标函数推导12:18
@@ -168,7 +168,7 @@
 课时140xgboost安装03:32
 课时141xgboost实战演示14:44
 课时142Adaboost算法概述13:01
-章节26:自然语言处理词向量模型-Word2Vec
+## 章节26:自然语言处理词向量模型-Word2Vec
 课时143自然语言处理与深度学习11:58
 课时144语言模型06:16
 课时145-N-gram模型08:32
@@ -179,12 +179,12 @@
 课时150CBOW求解目标05:39
 课时151梯度上升求解10:11
 课时152负采样模型07:15
-章节27:使用Gensim库构造中文维基百度数据词向量模型
+## 章节27:使用Gensim库构造中文维基百度数据词向量模型
 课时153使用Gensim库构造词向量06:22
 课时154维基百科中文数据处理10:27
 课时155Gensim构造word2vec模型08:52
 课时156测试模型相似度结果07:42
-章节28:scikit-learn模型建立与评估
+## 章节28:scikit-learn模型建立与评估
 课时157使用python库分析汽车油耗效率15:09
 课时158使用scikit-learn库建立回归模型14:02
 课时159使用逻辑回归改进模型效果13:12
@@ -192,12 +192,12 @@
 课时161ROC指标与测试集的价值14:31
 课时162交叉验证15:15
 课时163多类别问题15:52
-章节29:Python库分析科比生涯数据
+## 章节29:Python库分析科比生涯数据
 课时164Kobe Bryan生涯数据读取与简介07:45
 课时165特征数据可视化展示11:41
 课时166数据预处理12:32
 课时167使用Scikit-learn建立模型10:12
-章节30:Python时间序列分析
+## 章节30:Python时间序列分析
 课时168章节简介01:03
 课时169Pandas生成时间序列11:28
 课时170Pandas数据重采样09:22
@@ -210,18 +210,18 @@
 课时177股票预测案例09:57
 课时178使用tsfresh库进行分类任务12:04
 课时179维基百科词条EDA14:30
-章节31:机器学习项目实战-贷款申请最大化利润
+## 章节31:机器学习项目实战-贷款申请最大化利润
 课时180数据清洗过滤无用特征12:08
 课时181数据预处理10:12
 课时182获得最大利润的条件与做法13:26
 课时183预测结果并解决样本不均衡问题12:47
-章节32:机器学习项目实战-用户流失预警
+## 章节32:机器学习项目实战-用户流失预警
 课时184数据背景介绍06:35
 课时185数据预处理10:05
 课时186尝试多种分类器效果08:32
 课时187结果衡量指标的意义19:50
 课时188应用阈值得出结果06:26
-章节33:探索性数据分析-足球赛事数据集
+## 章节33:探索性数据分析-足球赛事数据集
 课时189内容简介02:13
 课时190数据背景介绍10:30
 课时191数据读取与预处理13:09
@@ -231,7 +231,7 @@
 课时195多特征之间关系分析11:21
 课时196报表可视化分析10:38
 课时197红牌和肤色的关系17:16
-章节34:探索性数据分析-农粮组织数据集
+## 章节34:探索性数据分析-农粮组织数据集
 课时198数据背景简介11:05
 课时199数据切片分析17:26
 课时200单变量分析15:21
@@ -239,7 +239,7 @@
 课时202数据对数变换09:43
 课时203数据分析维度06:55
 课时204变量关系可视化展示12:22
-章节35:机器学习项目实战-HTTP日志聚类分析
+## 章节35:机器学习项目实战-HTTP日志聚类分析
 课时205建立特征工程17:25
 课时206特征数据预处理10:34
 课时207应用聚类算法得出异常IP点
