--- a/aliyun/云计算acp/安骑士.md
+++ b/aliyun/云计算acp/安骑士.md
@@ -6,6 +6,9 @@ https://help.aliyun.com/document_detail/28451.html
 安骑士是一款经受200万+主机稳定性考验的主机安全加固产品，拥有自动化实时入侵威胁检测、病毒查杀、漏洞智能修复、基线一键核查等功能，是构建主机安全防线的统一管理平台。
 ## 1.2 功能列表
 https://help.aliyun.com/document_detail/31770.html
+> 入侵检测
+  * 异常登录
+    * `暴力破解登录拦截`：对密码进行暴力破解的行为进行联动防御。
 ## 1.3 产品优势
 https://help.aliyun.com/document_detail/28454.html
 > 跨平台支持
