python 自动跟随机器人教程

--- a/aliyun/云计算acp/3.弹性伸缩.md
+++ b/aliyun/云计算acp/3.弹性伸缩.md
@@ -106,3 +106,6 @@ https://help.aliyun.com/document_detail/25954.html
 > 一个伸缩组可以添加多种规格的ECS实例吗？
   * 不可以。`一个伸缩组只能设置一种伸缩配置ECS实例规格`。不过，您可以`设置多个伸缩组`，每个伸缩组设置不同的ECS实例规格。
   * 创建的ECS配置都是相同的
+## 7.2 知识库
+1. [自动释放ECS实例之前，如何保证应用运行完成](https://help.aliyun.com/knowledge_detail/38552.html)  
+> 如您需要确保在 ECS 实例上任务处理完成才让弹性伸缩释放该实例，您需要在自定义镜像中存放执行脚本，`并设置命令在操作系统关机时自动执行该脚本`。
