--- a/aliyun/云计算acp/4.负载均衡SLB.md
+++ b/aliyun/云计算acp/4.负载均衡SLB.md
@@ -5,7 +5,7 @@
 https://help.aliyun.com/document_detail/27539.html
 > 负载均衡由以下三个部分组成：
   * 负载均衡实例 （Server Load Balancer instances）
-    * 一个负载均衡实例是一个运行的负载均衡服务，用来接收流量并将其分配给后端服务器。要使用负载均衡服务，您必须创建一个负载均衡实例，并至少添加一个监听和两台ECS实例。
+    * 一个负载均衡实例是一个运行的负载均衡服务，用来接收流量并将其分配给后端服务器。要使用负载均衡服务，您必须创建一个负载均衡实例，`并至少添加一个监听和两台ECS实例`。
   * 监听 （Listeners）
     * 监听用来检查客户端请求并将请求转发给后端服务器。监听也会对后端服务器进行健康检查。
   * 后端服务器（Backend Servers）
@@ -35,6 +35,10 @@ https://help.aliyun.com/document_detail/85943.html
 ## 5.3 健康检查
 ### 5.3.1 健康检查介绍
 https://help.aliyun.com/document_detail/85958.html
+> HTTP/HTTPS监听健康检查机制
+  * 针对七层（HTTP或HTTPS协议）监听，健康检查通过`HTTP HEAD探测`来获取状态信息，如下图所示。
+> TCP监听健康检查机制
+  * 针对四层TCP监听，为了提高健康检查效率，健康检查通过定制的`TCP探测`来获取状态信息
 > UDP监听的检查机制如下：
   * LVS节点服务器根据监听的健康检查配置，向后端ECS的内网IP+【健康检查端口】发送UDP报文。
   * 如果后端ECS相应端口未正常监听，则系统会返回类似返回 port XX unreachable的ICMP报错信息；反之不做任何处理。
@@ -89,10 +93,24 @@ https://help.aliyun.com/knowledge_detail/55193.html
   * 添加不同可用区的ECS实例作为负载均衡实例的后端服务器，从而提高本地可用性。
   * 在同一地域创建多个负载均衡实例，通过DNS轮询的方式对外提供服务，从而提高本地可用性。
   * 在不同地域创建多个负载均衡实例，通过DNS轮询的方式对外提供服务，从而提高跨地域的可用性。
+### 8.2.3 后端服务器常见问题
+https://help.aliyun.com/knowledge_detail/55198.html
+> 1. 负载均衡实例最多支持添加多少ECS实例？
+  * 默认每个SLB实例可以添加200个ECS实例，一个ECS实例可以被50个SLB实例关联。
+> 3. 后端ECS实例的操作系统是否可以不同？
+  * 可以。
+  * 负载均衡本身不会限制后端ECS实例使用哪种操作系统，只要确保后端ECS实例中的应用服务部署相同且数据一致即可。但建议使用相同的操作系统，以便您日后的管理维护。
+> 4. 可以使用不同地域的ECS实例作为后端服务器么？
+  * 不可以。
+  * 负载均衡不支持跨地域部署。负载均衡实例的地域和后端ECS实例的地域必须相同。
 ### 8.2.4 健康检查常见问题
 https://help.aliyun.com/knowledge_detail/55205.html
 > 3. 是否可以关闭健康检查？
   * 您`只可能关闭HTTP/HTTPS监听的健康检查，不能关闭TCP/UDP监听的健康检查`
+> 7. 为什么有100开头的IP在频繁访问ECS实例？
+  * 负载均衡系统除了会通过系统服务器的内网IP将来自外部的访问请求转到后端ECS实例之外，还会对ECS实例进行健康检查和可用性监控，这些访问的来源都是由负载均衡系统发起的。
+  * `负载均衡系统的地址段为100.64.0.0/10（100.64.0.0/10 是阿里云保留地址`，其他用户无法分配到该网段内，不会存在安全风险），所以会有很多100开头的IP地址访问ECS实例。
+  * 为了确保您对外服务的可用性，确保对上述地址的访问配置了放行规则。
 ### 8.2.8 为什么请求不均衡
 https://help.aliyun.com/knowledge_detail/66280.html
 > 负载均衡请求不均衡的原因可能有以下几种可能：
@@ -111,10 +129,17 @@ https://help.aliyun.com/knowledge_detail/55201.html
 7. 可以使用PKCS#12（PFX）格式的证书么？
 可以。但在上传证书前，您需要将证书转换为PEM格式，详情参见转换证书格式。
 # 其他
-[SLB 配置获取真实IP](https://help.aliyun.com/knowledge_detail/60529.html)
+1. [SLB 配置获取真实IP](https://help.aliyun.com/knowledge_detail/60529.html)
 X-Forwarded-For 是一个 HTTP 扩展头部，用来表示 HTTP 请求端真实 IP。
-规划和准备
-[规划与准备](https://help.aliyun.com/document_detail/27548.html)
+2. [规划与准备](https://help.aliyun.com/document_detail/27548.html)
 > 为了提供更加稳定可靠的负载均衡服务，阿里云负载均衡已在各地域部署了多可用区以实现同地域下的跨机房容灾。此外，您也可以在不同地域创建多个负载均衡实例，`通过DNS轮询的方式对外提供服务，从而提高跨地域的可用性`。
-* 为了减少延迟并提高下载速度，建议选择离您客户最近的地域。
-* 由于负载均衡不支持跨地域部署，因此应选择与后端ECS实例相同的地域。
+  * 为了减少延迟并提高下载速度，建议选择离您客户最近的地域。
+  * 由于负载均衡不支持跨地域部署，因此应选择与后端ECS实例相同的地域。
+3. 负载均衡注意事项
+  * 1,如果在伸缩组中指定了负载均衡实例，伸缩组会自动将加入伸缩组的 ECS 实例添加到指定的负载均衡实例当中。
+  * 2,`指定的负载均衡实例必须是已启用状态`。
+    * Active（启用状态）：当创建好负载均衡实例后，在到期之前，您的负载均衡实例都是启用状态。此种状态下，您可以正常使用负载均衡实例。
+    * https://help.aliyun.com/document_detail/74811.html
+  * 3,指定的负载均衡实例所有配置的监听端口必须开启健康检查，否则创建失败。
+  * 4,如果负载均衡实例已挂载了 VPC 类型的 ECS 实例，则不支持该负载均衡实例加入伸缩组。
+  * 5,加入负载均衡的 ECS 实例的权重默认为 50。
