--- a/aliyun/云计算acp/9.DDoS防护.md
+++ b/aliyun/云计算acp/9.DDoS防护.md
@@ -4,6 +4,20 @@
 ## 1.2 基本概念
 ### 1.2.2 流量清洗、黑洞与阈值
 https://help.aliyun.com/knowledge_detail/40038.html
+### 1.2.3 常见DDoS攻击
+https://help.aliyun.com/document_detail/28401.html
+> DDoS
+  * Distributed Denial of Service，即分布式拒绝服务。DDoS攻击指借助于客户/服务器技术，将多个计算机联合起来作为攻击平台，对一个或多个目标发动DDoS攻击，从而成倍地提高拒绝服务攻击的威力。
+> 畸形报文
+  * 畸形报文主要是指Frag Flood、Smurf、Stream Flood、Land Flood攻击，以及IP畸形包、TCP畸形包、UDP畸形包。
+> 传输层DDoS攻击
+  * 传输层DDoS攻击主要是指`Syn Flood，Ack Flood，UDP Flood，ICMP Flood、RstFlood`等攻击。
+> Web应用DDoS攻击
+  * Web应用层攻击主要是指`HTTP Get Flood，HTTP Post Flood，CC等攻击`。
+> DNS DDoS攻击
+  * DNS DDoS攻击主要是指DNS Request Flood、DNS Response Flood、虚假源+真实源DNS Query Flood、权威服务器和Local服务器攻击。
+> 连接型DDoS攻击
+  * 连接型DDoS攻击主要是指TCP慢速连接攻击，连接耗尽攻击，Loic，Hoic，Slowloris， Pyloris，Xoic等慢速攻击。
 # 2. DDoS基础防护服务
 ## 2.1 产品简介
 ### 2.1.6 安全信誉防护联盟
