--- a/aliyun/云计算acp/3.弹性伸缩.md
+++ b/aliyun/云计算acp/3.弹性伸缩.md
@@ -34,7 +34,7 @@ https://help.aliyun.com/document_detail/25858.html
 > 弹性伸缩
   * 弹性伸缩是根据用户的业务需求和策略，自动调整其弹性计算资源的管理服务。其能够在业务增长时自动增加 ECS 实例，并在业务下降时自动减少 ECS 实例。
 > 伸缩组
-  * 伸缩组是具有相同应用场景的 ECS 实例的集合。`伸缩组定义了组内 ECS 实例数的最大值、最小值及其相关联的负载均衡实例和 RDS 实例等属性`。
+  * 伸缩组是具有相同应用场景的 ECS 实例的集合。伸缩组定义了组内 `ECS 实例数的最大值、最小值`及其相关联的`负载均衡实例和 RDS 实例等属性`。
 > 伸缩配置
   * `伸缩配置定义了用于弹性伸缩的 ECS 实例的配置信息`。
 > 伸缩规则
@@ -106,6 +106,8 @@ https://help.aliyun.com/document_detail/25954.html
 > 一个伸缩组可以添加多种规格的ECS实例吗？
   * 不可以。`一个伸缩组只能设置一种伸缩配置ECS实例规格`。不过，您可以`设置多个伸缩组`，每个伸缩组设置不同的ECS实例规格。
   * 创建的ECS配置都是相同的
+2. [弹性伸缩添加数据盘的自动弹性伸缩](https://help.aliyun.com/knowledge_detail/38553.html)
+  * 在伸缩配置中，单击增加 数据盘 ，并设置数据盘的空间大小。如果需要用快照创建数据盘，可以单击 用快照创建磁盘，选择相应的快照。
 ## 7.2 知识库
 1. [自动释放ECS实例之前，如何保证应用运行完成](https://help.aliyun.com/knowledge_detail/38552.html)  
 > 如您需要确保在 ECS 实例上任务处理完成才让弹性伸缩释放该实例，您需要在自定义镜像中存放执行脚本，`并设置命令在操作系统关机时自动执行该脚本`。
