--- a/aliyun/云计算acp/8.弹性公网EIP.md
+++ b/aliyun/云计算acp/8.弹性公网EIP.md
@@ -11,7 +11,7 @@ https://help.aliyun.com/knowledge_detail/38753.html
   * 公网IP不可以与ECS实例解绑，而EIP可以随时解绑和绑定。
   * 您可以将ECS的固定公网IP转换为EIP，详情参见ECS固定公网IP转换为EIP。
 > EIP为什么在网卡上看不到？
-  * EIP配置在Internet网关设备上，通过NAT方式映射到了ECS实例的私网网卡，所以在ECS实例的私网网卡上无法查看到EIP。
+  * EIP配置在Internet网关设备上，通过NAT方式映射到了ECS实例的私网网卡，所以`在ECS实例的私网网卡上无法查看到EIP`。
 > 一个账号可以申请多少个EIP？
   * 一个账号最多可以申请20个EIP。如果您需更多EIP，可以提交工单申请。
 > EIP当前可以绑定到哪些云产品？
