--- a/aliyun/云计算acp/9.DDoS防护.md
+++ b/aliyun/云计算acp/9.DDoS防护.md
@@ -28,6 +28,11 @@ https://help.aliyun.com/knowledge_detail/40054.html
   * 根据评分值动态计算用户的DDoS防护能力，绝大部分用户都将免费获得增量DDoS防护量。
   * 根据安全信誉分计算出的黑洞触发阈值（即攻击防护上限，超过该上限就触发黑洞策略），可用于ECS及SLB当天低于该阈值攻击的无偿防护。当受攻击数次被黑洞时，黑洞触发阈值会下降到原默认阈值。如果攻击大小超过安全信誉计算的最新阈值，则会触发机房对该攻击IP的黑洞。
   * 随着攻击的发生，将影响下个周期的安全信誉评分。
+# 3. DDoS防护包
+## 3.1 产品简介 
+### 3.1.1 什么是DDoS防护包
+https://help.aliyun.com/document_detail/63643.html
+* DDoS防护包是一款针对云上`ECS、SLB、Web应用防火墙、EIP`等云产品直接提升防御能力的安全产品。
 # 4. DDoS高防IP 
 ## 4.1 产品简介 
 ### 4.1.2 产品架构
