--- a/program/python/python数据分析与机器学习实战/1.目录.md
+++ b/program/python/python数据分析与机器学习实战/1.目录.md
@@ -49,7 +49,7 @@
 课时40数据预处理11:25
 课时41sklearn库与功能14:42
 课时42多变量KNN模型16:37
-章节7:线性回归算法原理推导
+## 章节7:线性回归算法原理推导
 课时43线性回归算法概述14:24
 课时44误差项分析11:33
 课时45似然函数求解09:36
@@ -59,7 +59,7 @@
 课时48梯度下降原理11:42
 课时49梯度下降方法对比07:20
 课时50学习率对结果的影响06:09
-章节9:逻辑回归算法
+## 章节9:逻辑回归算法
 课时51逻辑回归算法原理推导10:52
 课时52逻辑回归求解14:59
 章节10:案例实战：Python实现逻辑回归与梯度下降策略
@@ -84,7 +84,7 @@
 课时69决策树构造实例10:09
 课时70信息增益率05:49
 课时71决策树剪枝策略15:31
-章节13:案例实战：使用sklearn构造决策树模型
+## 章节13:案例实战：使用sklearn构造决策树模型
 课时72决策树复习08:55
 课时73决策树涉及参数11:09
 课时74树可视化与sklearn库简介18:14
@@ -94,7 +94,7 @@
 课时77特征重要性衡量13:51
 课时78提升模型11:15
 课时79堆叠模型07:09
-章节15:案例实战：集成算法建模实战
+## 章节15:案例实战：集成算法建模实战
 课时80集成算法实例概述10:51
 课时81ROC与AUC指标10:03
 课时82基础模型09:32
@@ -107,7 +107,7 @@
 课时88贝叶斯拼写纠错实例11:46
 课时89垃圾邮件过滤实例14:10
 课时90贝叶斯实现拼写检查器12:21
-章节17:Python文本数据分析：新闻分类任务
+## 章节17:Python文本数据分析：新闻分类任务
 课时91文本分析与关键词提取12:11
 课时92相似度计算11:44
 课时93新闻数据与任务简介10:20
