--- a/aliyun/云计算acp/4.负载均衡SLB.md
+++ b/aliyun/云计算acp/4.负载均衡SLB.md
@@ -24,6 +24,13 @@ https://help.aliyun.com/document_detail/32460.html
   * 一致性哈希（CH）调度算法。
 # 5. 用户指南
 ## 5.2 监听
+### 5.2.2 添加UDP监听
+https://help.aliyun.com/document_detail/86130.html
+UDP协议多用于关注实时性而相对不注重可靠性的场景，如视频聊天、金融实时行情推送等。您可以添加一个UDP监听转发来自UDP协议的请求。
+### 5.2.3 添加HTTP监听
+https://help.aliyun.com/document_detail/85949.html
+* HTTP协议适用于需要对数据内容进行识别的应用，如Web应用、小的手机游戏等。您可以添加一个HTTP监听转发来自HTTP协议的请求。
+* 图片请求，文字请求
 ### 5.2.4 添加HTTPS监听
 https://help.aliyun.com/document_detail/86438.html
 > 在上传证书前，请注意：
@@ -51,6 +58,27 @@ https://help.aliyun.com/document_detail/85958.html
     * 检查阈值 (健康检查连续成功或失败的次数)
   * 健康检查时间窗的计算方法如下：
     * 健康检查失败时间窗=响应超时时间×不健康阈值+检查间隔×(不健康阈值-1)
+### 5.3.3 配置健康检查
+https://help.aliyun.com/document_detail/85959.html
+> 健康检查协议
+  * 监听为TCP协议时，`健康检查方式可选TCP或HTTP模式`。
+    * TCP模式的健康检查是基于网络层探测。
+    * HTTP模式的健康检查是通过发送head请求。
+    * TCP 监听支持 TCP 和 HTTP 两种方式进行健康检查，HTTP 监听只支持 HTTP 方式健康检查
+> 健康检查响应超时和健康检查间隔示例
+以如下健康检查配置为例：
+
+响应超时时间：5秒
+健康检查间隔：2秒
+健康阈值：3次
+不健康阈值：3次
+
+`ECS 健康检查失败响应时间` = (健康检查间隔+响应超时)*不健康阈值,即(2+5)×3=21 秒
+`ECS 健康检查成功响应时间` = 健康检查间隔*健康阈值,即 2×3=6 秒
+
+健康检查失败时间窗 = 响应超时时间×不健康阈值+检查间隔×(不健康阈值-1)，即5×3+2×（3-1）=19s。
+健康检查成功时间窗 = (健康检查成功响应时间×健康阈值)+检查间隔×(健康阈值-1)，即（1×3）+2×（3-1）=7s。
+
 ## 5.5 转换证书格式
 ### 5.5.5 转换证书格式
 https://help.aliyun.com/document_detail/85970.html
@@ -111,6 +139,16 @@ https://help.aliyun.com/knowledge_detail/55205.html
   * 负载均衡系统除了会通过系统服务器的内网IP将来自外部的访问请求转到后端ECS实例之外，还会对ECS实例进行健康检查和可用性监控，这些访问的来源都是由负载均衡系统发起的。
   * `负载均衡系统的地址段为100.64.0.0/10（100.64.0.0/10 是阿里云保留地址`，其他用户无法分配到该网段内，不会存在安全风险），所以会有很多100开头的IP地址访问ECS实例。
   * 为了确保您对外服务的可用性，确保对上述地址的访问配置了放行规则。
+> 5. ECS实例权重设置为零对健康检查有什么影响？
+  * 该状态下，负载均衡不会再将流量转发给该ECS实例，且四层监听的后端服务器健康检查会显示异常（七层监听不会显示异常）。
+  * `将负载均衡后端ECS实例的权重置为零，相当于将该ECS实例移出负载均衡`。一般是在ECS实例进行重启、配置调整等主动运维时将其权重设置为零。
+  * 设置 ECS 权重为 0 后，这台 ECS 上已经建立的长链接依然在；而移除的话，已有的长链接会断掉. 
+  * 对于新建连接，设置 ECS 权重为 0 和移除操作后，新连接都不会转到目标机器上。
+  * `所以设置 ECS 权重为 0 并不是将 ECS 直接移出。`
+> 轮询转发
+  * 负载均衡同时设置权重和最小连接数，分发规则最小连接数优先，同时设置权重和轮询转发，权重优先。
+  * https://help.aliyun.com/document_detail/27781.html
+  * `负载均衡如果同时设置了加权最小连接数或加权轮询`，分发规则会先检查权重再通过设置的最小连接数或轮询进行分发；
 ### 8.2.8 为什么请求不均衡
 https://help.aliyun.com/knowledge_detail/66280.html
 > 负载均衡请求不均衡的原因可能有以下几种可能：
