--- a/aliyun/云计算acp/5.专有网络VPC.md
+++ b/aliyun/云计算acp/5.专有网络VPC.md
@@ -1,14 +1,28 @@
 
 
 1. https://help.aliyun.com/product/27706.html
-
+# 1. 产品简介 
+## 1.4 产品优势
+https://help.aliyun.com/document_detail/34219.html
+> 安全
+  * 每个VPC都有一个独立的隧道号，一个隧道号对应着一个虚拟化网络。`专有网络之间通过隧道ID进行隔离`：
+    * 专有网络内部由于交换机和路由器的存在，所以可以像传统网络环境一样划分子网，每一个子网内部的不同云服务器使用同一个交换机互联，不同子网间使用路由器互联。
+    * `不同专有网络之间内部网络完全隔离，只能通过对外映射的IP（弹性公网IP和NAT IP）互联`。
+    * 由于使用隧道封装技术对云服务器的IP报文进行封装，所以云服务器的数据链路层（二层MAC地址）信息不会进入物理网络，实现了不同云服务器间二层网络隔离，因此也实现了不同专有网络间二层网络隔离。
+    * 专有网络内的ECS使用安全组防火墙进行`三层网络访问控制`。
 # 3. 用户指南
 ## 3.1 管理专有网络
 https://help.aliyun.com/document_detail/65398.html
 路由器和交换机是VPC的两个基础组件：
 * 路由器（VRouter）可以连接VPC内的各个交换机，同时也是连接VPC和其他网络的网关设备。每个专有网络创建成功后，系统会自动创建一个路由器。每个路由器关联一张路由表。详情参见路由。
 * 交换机（VSwitch）是组成专有网络的基础网络设备，用来连接不同的云产品实例。创建专有网络之后，您可以通过创建交换机为专有网络划分一个或多个子网。您可以将应用部署在不同可用区的交换机内，提高应用的可用性。同一个VPC内不同可用区的交换机默认内网互通。详情参见管理交换机。
-
+## 3.2 管理交换机
+https://help.aliyun.com/document_detail/65387.html
+* `交换机不支持组播和广播`。您可以通过阿里云提供的组播代理工具实现组播代理
+> 删除交换机
+  * 在删除交换机前，确保：
+    * 您已经`删除该交换机下创建的云资源`如ECS、SLB、RDS等。
+    * 如果该交换机配置了SNAT条目、HAVIP等，确保您已经`删除这些关联的资源`。
 ## 3.4 路由表
 https://help.aliyun.com/document_detail/87057.html
 
@@ -22,6 +36,7 @@ https://help.aliyun.com/document_detail/57954.html
 1. https://help.aliyun.com/document_detail/34964.html
 # 7. 常见问题
 ## 7.3 VPC通信常见问题
+https://help.aliyun.com/knowledge_detail/54486.html
 > 1. 同一VPC内不同交换机可以通信么？
   * 只要安全组规则允许，同一VPC内的ECS实例均可以互相通信，无论交换机是否相同。
 > 2. 不同VPC之间能否内网互通？
