--- a/aliyun/云计算acp/7.内容分发网络CDN.md
+++ b/aliyun/云计算acp/7.内容分发网络CDN.md
@@ -4,7 +4,23 @@
 ## 1.3 功能优势
 https://help.aliyun.com/document_detail/27103.html
 * 充足的带宽、存储资源：`单节点带宽 40Gbps+`，全网带宽输出能力 120 Tbps。
+# 4. 用户指南
+## 4.4. 业务类型
+### 4.4.4 类型4：直播流媒体加速
+https://help.aliyun.com/document_detail/27117.html
+> 应用场景介绍
+  * 为各类视频直播平台提供高性能稳定直播技术支持，如交互性在线教育网站、游戏竞技类直播站点、个人秀场直播、事件类和垂直行业的直播平台等。当前支持`RTMP，HLS，FLV`三种格式直播内容加速。
 # 8  常见问题
+## 8.1 域名接入相关
+1. [CDN的配置回源host与源站的区别](https://help.aliyun.com/knowledge_detail/40117.html)
+> 源站：源站决定了回源时，请求到哪个IP
+  * 回源host：回源host决定回源请求访问到该IP上的哪个站点
+  * 例子1：源站是域名
+    * `源站为www.a.com 回源host为www.b.com`
+    * 那么实际回源是请求到www.a.com解析到的IP，对应的主机上的站点www.b.com
+  * 例子2：源站是IP
+    * 源站为1.1.1.1 回源host为www.b.com
+    * 那么实际回源的是1.1.1.1对应的主机上的 站点www.b.com
 ## 8.5 缓存相关
 1. [使用CDN后，文件与源文件不一致，如何刷新缓存？](https://help.aliyun.com/knowledge_detail/40188.html)
 > URL刷新
