--- a/aliyun/云计算acp/2.对象存储OSS.md
+++ b/aliyun/云计算acp/2.对象存储OSS.md
@@ -89,11 +89,26 @@ https://help.aliyun.com/document_detail/31991.html
   * 上传文件之前，无法确定上传文件的大小。
 # 8. 控制台用户指南
 ## 8.4 管理存储空间
+### 8.4.4 修改存储空间读写权限
+https://help.aliyun.com/document_detail/31898.html
+> OSS 提供权限控制 ACL（Access Control List），您可以在创建存储空间的时候设置相应的 ACL 权限控制，也可以在创建之后修改 ACL。如果不设置 ACL，默认值为私有。
+> OSS ACL 提供存储空间级别和文件级别的权限访问控制，目前有三种访问权限：
+  * 私有：只有该存储空间的拥有者可以对该存储空间内的文件进行读写操作，其他人无法访问该存储空间内的文件。
+  * 公共读：只有该存储空间的拥有者可以对该存储空间内的文件进行写操作，任何人（包括匿名访问者）可以对该存储空间中的文件进行读操作。
+  * 公共读写：任何人（包括匿名访问者）都可以对该存储空间中的文件进行读写操作，所有这些操作产生的费用由该存储空间的拥有者承担，请慎用该权限。
+### 8.4.7 设置防盗链
+https://help.aliyun.com/document_detail/31901.html
 ### 8.4.9 管理域名
 https://help.aliyun.com/document_detail/31902.html
 > 说明
   * 您绑定的域名需在`工信部备案`，否则域名访问将会受到影响。
   * 每个存储空间最多可以绑定20个域名。
+## 8.5 管理文件
+### 8.5.1 文件概览
+https://help.aliyun.com/document_detail/31908.html
+> 在 OSS 服务中，用户操作的`基本数据单元是 object（对象）`，`单个对象的大小限制为 48.8TB`，一个存储空间中可以有无限量的对象。
+### 8.5.8 设置文件HTTP头
+https://help.aliyun.com/document_detail/31913.html
 ## 8.6 管理碎片
 https://help.aliyun.com/document_detail/31916.html
 > 什么是碎片
