--- a/aliyun/云计算acp/1.云服务器ECS.md
+++ b/aliyun/云计算acp/1.云服务器ECS.md
@@ -121,7 +121,7 @@ https://help.aliyun.com/document_detail/25446.html
     * 实例状态必须为 `运行中（Running）或者 已停止（Stopped），不能为 已锁定（Locked）`。
     * 实例不欠费。
     * 挂载云盘时，云盘的状态必须为 `待挂载（Available）`。
-    * 云盘只能挂载到同一地域下同一可用区内的实例上，`不能跨可用区挂载`。
+    * 云盘只能挂载到`同一地域下同一可用区内`的实例上，`不能跨可用区挂载`。
     * 一台ECS实例`最多能挂载16块云盘`作数据盘用，`同一时刻，一块云盘只能挂载到一个台实例上`。
     * 独立创建的云盘能挂载到同一地域下同一可用区的任意实例上（包括预付费和按量付费的实例）。
 ### 5.6.10 更换系统盘
