--- a/aliyun/云计算acp/3.弹性伸缩.md
+++ b/aliyun/云计算acp/3.弹性伸缩.md
@@ -94,7 +94,7 @@ https://bbs.aliyun.com/read/557206.html
 ### 6.10.2 添加ECS实例
 https://help.aliyun.com/document_detail/25954.html
 > 往指定的伸缩组添加ECS实例。加入的ECS实例的限定条件包括：
-  * 加入的ECS实例必须与伸缩组在同一个地域。
+  * 加入的`ECS实例必须与伸缩组在同一个地域`。
   * 加入的ECS实例必须是`running`状态。
   * 加入的ECS实例不能已加入到其它伸缩组中。
   * 加入的ECS实例支持包年包月和按量付费两种类型。
