--- a/aliyun/1.云计算acp/1.云服务器ECS.md
+++ b/aliyun/1.云计算acp/1.云服务器ECS.md
@@ -64,6 +64,16 @@ https://help.aliyun.com/document_detail/56159.html
 # 2. 产品定价
 ## 2.3 按量付费
 https://help.aliyun.com/knowledge_detail/40653.html
+# 3. 个人版快速入门 
+## 3.6 步骤 4：格式化数据盘 
+### 3.6.1 Windows 格式化数据盘
+https://help.aliyun.com/document_detail/25418.html
+> 如果在创建Windows实例时配了数据盘，您需要先格式化并分区数据盘后才能正常使用数据盘。
+> 本文仅适用于不大于 2 TiB 的数据盘，大于 2 TiB 的数据盘，请参考 分区格式化大于2 TiB云盘。
+> `云服务器 ECS 仅支持对 数据盘 进行分区，而不支持对 系统盘 进行分区`。如果您强行使用第三方工具对系统盘进行分区操作，可能引发未知风险，如系统崩溃、数据丢失等。
+> 操作须知
+  * 单独 购买的数据盘 需要先 `挂载数据盘`，然后才能进行格式化和分区操作。
+  * `随实例时一起购买的数据盘，无需挂载`，直接格式化并分区。
 # 5. 用户指南
 ## 5.2 ECS 使用须知
 https://help.aliyun.com/document_detail/25430.html
@@ -124,6 +134,35 @@ https://help.aliyun.com/document_detail/25446.html
     * 云盘只能挂载到`同一地域下同一可用区内`的实例上，`不能跨可用区挂载`。
     * 一台ECS实例`最多能挂载16块云盘`作数据盘用，`同一时刻，一块云盘只能挂载到一个台实例上`。
     * 独立创建的云盘能挂载到同一地域下同一可用区的任意实例上（包括预付费和按量付费的实例）。
+### 5.6.4. 分区格式化大于2 TiB云盘
+https://help.aliyun.com/document_detail/34377.html
+> 如果您要分区格式化一块大于2 TiB的作数据盘用的云盘（本文统一称为 大容量数据盘，小于2 TiB的数据盘统称为 小容量数据盘），`您必须采用GPT分区形式。`
+### 5.6.6 扩容云盘
+#### 5.6.6.2 扩容系统盘
+https://help.aliyun.com/document_detail/44986.html
+> 更换系统盘存在如下风险：
+  * 更换系统盘需要停止实例，因此会中断您的业务。
+  * 更换完成后，您需要在新的系统盘中重新部署业务运行环境，有可能会对您的业务造成长时间的中断。
+  * 更换系统盘是`重新为您的实例分配一个系统盘，云盘ID会改变`，所以`基于旧的系统盘创建的快照将不能用于回滚新的系统盘`。
+  * 更换系统盘后，您手动创建的快照不受影响，您仍可以用这些快照创建自定义镜像。如果您为旧的系统盘设置了自动快照策略，而且设置了自动快照随云盘释放，则自动快照策略不再适用于新的系统盘，而且，旧系统盘的自动快照会自动删除。
+> 更换系统盘时，您需要注意以下信息：
+  * 更换系统盘后，您的实例会被分配一个新的系统盘，系统盘ID会更新，原系统盘被释放。
+  * 您不能更换系统盘的云盘类型。
+  * 扩容后的系统盘，容量最小为扩容前的容量，最大为500 GiB。不能缩小系统盘的容量。
+  * `Windows 2003不支持系统盘扩容`。
+  * 如果您的包年包月实例做过 续费降配 操作，进入下一个计费周期前，您不能修改系统盘容量。
+  * 实例的IP地址和MAC地址不变。
+### 5.6.6.3 扩容数据盘_Windows
+https://help.aliyun.com/document_detail/25451.html
+随着业务的增长，您的数据盘容量可能无法满足数据存储的需要，这时您可以使用 磁盘扩容 功能扩容数据盘。
+> 说明:
+  * 建议在扩容数据盘之前手动创建快照，以备份数据。
+  * 无论数据盘的状态是 `待挂载 还是 使用中`，都可以执行磁盘扩容操作。
+  * `如果数据盘正在创建快照`，则不允许执行扩容数据盘的操作。
+  * 包年包月实例如果做过 续费降配 操作，`当前计费周期的剩余时间内`，实例上的包年包月云盘`不支持`扩容磁盘操作。
+  * 扩容磁盘只是`扩大数据盘容量`，而`不是扩容文件系统`。
+  * 磁盘扩容只能扩容数据盘，不能扩容系统盘或本地盘（本地 SSD 盘等）。
+  * 挂载在实例上的数据盘，只有`当实例处于 运行中 (Running) 或 已停止(Stopped) 状态`时才可以扩容。扩容这种数据盘需要在控制台上`重启实例后才能使扩容后的容量生效`，而重启实例会使您的实例停止工作，从而中断您的业务，所以请您谨慎操作。
 ### 5.6.10 更换系统盘
 https://help.aliyun.com/document_detail/50134.html
 > 更换系统盘后，
