--- a/aliyun/2.大数据acp/0.阿里云大数据工程师认证通关秘籍.md
+++ b/aliyun/2.大数据acp/0.阿里云大数据工程师认证通关秘籍.md
@@ -3,16 +3,10 @@
 
 大数据考试分享.png
 
-
-
-
-
 一、考试到底考啥
-
 知己知彼知大纲，我和另外几位同事都通过了认证，感觉考试大纲很靠谱儿，把考试大纲里提到的知识点都掌握，就可以通过考试。
 
 考试大纲部分内容：
-
 ●  熟悉阿里云大数据相关产品的基本概念，包括大数据计算服务（MaxCompute，原 ODPS）、Data IDE（原 BASE）、数据集成（原 CDP 云道）等（下同）
 
 ●  了解阿里云大数据相关产品的特点、应用场景以及与其他云产品配合使用，包括表格存储（Table Store，原 OTS）、云数据库 RDS、分布式关系型数据库 DRDS、分析型数据库（Analytic DB，原 ADS）等，能根据实际业务场景进行基础的架构设计
@@ -55,25 +49,19 @@
 
 
 
-MaxCompute
+## MaxCompute
 
-一、MaxCompute基础知识
-
+### 一、MaxCompute基础知识
 产品特点、基本概念、应用场景、架构组成。例如：生命周期、分区、资源、非计算性任务、计费模式等。命令行工具的基本操作命令。
 
 大牛解读：这部分是最基础的，没得说，一定一定要熟悉！举个例子：分区表到达设定的生命周期时间之后，会执行什么操作？资源包括哪几种？资源中的jar包使用什么命令去调用？
-
 之所以说ACP云计算专业认证比ACP大数据专业认证容易一些，因为云计算专业认证考察这些基础知识比较多。而大数据专业认证更侧重后面与实操相关的内容，更难掌握一些。
 
-
-
-二、MaxCompute SQL（DDL的建表、修改、属性等；DML的数据更新、多表关联、特色功能；内置函数、自定义函数中的UDF）
+### 二、MaxCompute SQL（DDL的建表、修改、属性等；DML的数据更新、多表关联、特色功能；内置函数、自定义函数中的UDF）
 
 大牛解读：这部分是重点中的重点，上面提到的内容都要掌握，会考察细节，比如多表关联的限制条件、使用“覆盖插入”可以实现什么功能，覆盖插入的具体SQL语句等。没有实际操作过的同学是很难都记住的。
 
-
-
-三、Graph 编程框架（概念、场景、流程、调用）
+### 三、Graph 编程框架（概念、场景、流程、调用）
 
 大牛解读：Graph编程框架在考试中所占比例不大，但还是有那么几道题的。“流程”和“调用”是需要重点掌握的。“概念”和“场景”部分大家简单了解即可，考试中不会涉及算法细节；学过算法的同学都很熟悉，上图“场景”中的几个算法/场景都是适合使用图模型去处理的，这就够了。
 
@@ -91,7 +79,7 @@ MaxCompute
 
 
 
-DataIDE
+## DataIDE
 
 基本概念：任务、调度、依赖、变量使用
 
@@ -103,7 +91,7 @@ DataIDE
 
 大数据开发套件.png
 
-数据集成
+## 数据集成
 
 考试分享配图.png
 
