--- a/aliyun/1.云计算acp/1.云服务器ECS.md
+++ b/aliyun/1.云计算acp/1.云服务器ECS.md
@@ -35,6 +35,10 @@ https://help.aliyun.com/document_detail/25380.html
 即将过期	稳定状态	Stopped
 已锁定	`稳定状态`	Stopped
 等待释放	稳定状态	Stopped
+## 1.6 块存储
+### 1.6.4 云盘三副本技术
+https://help.aliyun.com/document_detail/35108.html
+> 如果ECS实例由于病毒感染、人为误删除或黑客入侵等软故障原因造成数据丢失，`需要采用备份、快照 等技术手段来解决`。
 ## 1.7 网络和安全性 
 ### 1.6.4 专有网络的IP
 https://help.aliyun.com/document_detail/44441.html
@@ -108,8 +112,11 @@ https://help.aliyun.com/document_detail/25430.html
 https://help.aliyun.com/document_detail/25412.html
 ## 5.4 实例
 ### 5.4.1 创建实例
-* 使用自定义镜像创建实例
-https://help.aliyun.com/document_detail/25465.html
+> [使用自定义镜像创建实例](https://help.aliyun.com/document_detail/25465.html)
+> [使用向导创建实例](https://help.aliyun.com/document_detail/87190.html)
+  * 说明
+    * 实例创建完成后，`不可更改地域和可用区`。
+    * 部分实例规格族并不是全地域提供。详细信息，请参见 创建GPU计算型实例、创建f1实例、创建f2实例、创建超级计算集群 SCC 实例 和 创建弹性裸金属服务器。
 ### 5.4.5 升降配
 1. [升降配概述](https://help.aliyun.com/document_detail/25437.html)
 > 预付费：
@@ -165,7 +172,7 @@ https://help.aliyun.com/document_detail/44986.html
   * 更换系统盘需要停止实例，因此会中断您的业务。
   * 更换完成后，您需要在新的系统盘中重新部署业务运行环境，有可能会对您的业务造成长时间的中断。
   * 更换系统盘是`重新为您的实例分配一个系统盘，云盘ID会改变`，所以`基于旧的系统盘创建的快照将不能用于回滚新的系统盘`。
-  * 更换系统盘后，您手动创建的快照不受影响，您仍可以用这些快照创建自定义镜像。如果您为旧的系统盘设置了自动快照策略，而且设置了自动快照随云盘释放，则自动快照策略不再适用于新的系统盘，而且，旧系统盘的自动快照会自动删除。
+  * 更换系统盘后，您手动创建的快照不受影响，您仍可以用这些快照创建自定义镜像。如果您为旧的系统盘设置了自动快照策略，而且设置了自动快照随云盘释放，则自动快照策略不再适用于新的系统盘，而且，`旧系统盘的自动快照会自动删除`。
 > 更换系统盘时，您需要注意以下信息：
   * 更换系统盘后，您的实例会被分配一个新的系统盘，系统盘ID会更新，原系统盘被释放。
   * 您不能更换系统盘的云盘类型。
@@ -187,14 +194,16 @@ https://help.aliyun.com/document_detail/25451.html
 ### 5.6.10 更换系统盘
 https://help.aliyun.com/document_detail/50134.html
 > 更换系统盘后，
-  * 您的实例会被分配一个新的系统盘，系统盘ID会更新，原系统盘被释放。
+  * 您的实例会被分配一个新的系统盘，`系统盘ID会更新`，原系统盘被释放。
   * 系统盘的云盘类型不能更换。
   * 实例的`IP地址和MAC地址不变`。
   * 为了保证有足够的快照额度完成新系统盘的自动快照策略，您可以 删除不需要的旧系统盘快照。
 > 更换系统盘存在如下风险：
   * 更换系统盘需要`停止实例`，因此会中断您的业务。
   * 更换完成后，您需要在新的系统盘中重新部署业务运行环境，有可能会对您的业务造成长时间的中断。
-  * 更换系统盘相当于重新为您的实例分配了一个系统盘，磁盘ID会改变，所以基于旧的系统盘创建的快照将不能用于回滚新的系统盘
+  * 更换系统盘相当于重新为您的实例分配了一个系统盘，磁盘ID会改变，所以`基于旧的系统盘创建的快照将不能用于回滚新的系统盘`
+  * `更换系统盘后，您手动创建的快照不受影响，您仍能用这些快照创建自定义镜像`。
+  * 如果您为旧的系统盘设置了自动快照策略，而且设置了自动快照随磁盘释放，则自动快照策略不再适用于新的系统盘，而且，`旧系统盘的自动快照会自动删除`。
 > 跨操作系统更换时，数据盘的文件系统格式可能会无法识别。
   * Windows系统更换为Linux系统：需要单独安装软件识别，例如NTFS-3G等，因为Linux缺省情况下无法识别NTFS格式。
   * Linux系统更换为Windows系统：需要单独安装软件识别，例如Ext2Read、Ext2Fsd等，因为Windows卸省情况下无法识别ext3、ext4、XFS等文件系统格式。
@@ -275,7 +284,7 @@ https://help.aliyun.com/document_detail/25489.html
 > 调用该接口时，您需要注意：
   * 待挂载的ECS实例的状态必须为运行中（Running）或者已停止（Stopped）。
   * 挂载数据盘时，云盘的状态必须为待挂载（Available）。
-  * 必须三个字段：Action、InstanceId、DiskId
+  * 必须三个字段：`Action、InstanceId、DiskId`
 ## 8.8 镜像
 ### 8.8.1 CreateImage
 https://help.aliyun.com/document_detail/25535.html
@@ -293,13 +302,40 @@ https://help.aliyun.com/document_detail/25535.html
   * Linux 数据需要分区-格式化-挂载后才能使用和看到空间，挂载数据盘参考 格式化和挂载数据盘。
 2. [ECS系统盘和数据盘二次分区FAQ](https://help.aliyun.com/knowledge_detail/40566.html)
 > 系统盘能否再次划分出一个分区用作数据存储？
-出于系统安全和稳定性考虑，`阿里云官方不支持系统盘二次分区`，不管是Windows还是Linux。`如果用户强行使用第三方工具进行二次分区操作，可能引发未知风险`，如系统崩溃，数据丢失等。
+  * 出于系统安全和稳定性考虑，`阿里云官方不支持系统盘二次分区`，不管是Windows还是Linux。`如果用户强行使用第三方工具进行二次分区操作，可能引发未知风险`，如系统崩溃，数据丢失等。
+### 10.2.3 快照
+> 1. [快照回滚规则 FAQ](https://help.aliyun.com/knowledge_detail/40576.html)
+  * 1. 磁盘无快照是否能够回滚或数据恢复？
+    * 不能。后方的回滚、数据恢复操作都是基于快照进行的，如果无磁盘快照，则无法恢复数据。
+  * 2. 快照回滚能否单独回滚某个分区或部分数据？
+    * 不能。快照回滚是`针对整块磁盘`某个时间点的状态，而`不是某个分区或目录`。
+  * 3. 系统盘快照回滚是否会影响数据盘？
+    * 不影响。`快照回滚是针对单块磁盘进行的，不影响未回滚的其他磁盘`。
+  * 4. 更换系统后，快照能否回滚？
+    * 不能。更换系统后，原系统的快照不支持回滚到新系统上。但数据盘快照可以正常回滚。
+  * 5. 在回滚快照前，有哪些注意事项？
+    * 快照回滚前，强烈建议先做手动快照备份，以便意外时进行恢复或数据提取。
 ### 10.2.4 镜像
 https://help.aliyun.com/knowledge_detail/40609.html
 > 使用自定义镜像创建ECS实例时，以下原因会导致挂载磁盘失败：
   * 创建的实例没有数据盘
   * 数据盘是新磁盘，还没有进行分区格式化
   * 创建的自定义镜像没有去除/etc/fstab中磁盘挂载的条目
+> [复制镜像FAQ](https://help.aliyun.com/knowledge_detail/40569.html)
+  * 1. 什么情况下需要复制镜像？
+    * `自定义镜像只能在同一个地域使用，不能直接跨地域使用`。如果您需要：
+      * 将云服务器ECS上的应用部署在多个地域。
+      * 将云服务器ECS迁移到其他地域。
+      * 跨地域使用自定义镜像。
+        * 可以通过复制镜像解决。`您可以复制当前地域的自定义镜像到其他地域的同账号中`，在其他地域使用自定义镜像实现一致性部署应用环境。
+  * 2. 可以复制哪些镜像？
+    * `复制镜像只支持自定义镜像`。不支持公共镜像，镜像市场镜像和别人共享给您的镜像。
+  * 7. 怎么复制我的云账号的镜像资源到其他阿里云账号的其他地域？
+    * 复制自己的镜像到目标地域。
+    * 将该镜像共享给对方的云账号。
+    * 对方云账号的共享镜像列表中会显示该镜像。
+  * 8. 复制镜像有镜像容量限制吗？
+    * 没有限制。但是，复制容量超过500 GiB时需要提交工单申请，当您在控制台单击复制镜像时，控制台会提示您提交工单申请。
 ### 10.2.5 安全组
 1. [安全组使用 FAQ](https://help.aliyun.com/knowledge_detail/40570.html)
 > 什么是安全组？
@@ -311,9 +347,17 @@ https://help.aliyun.com/knowledge_detail/40609.html
   * 目前，一个实例中的每个弹性网卡默认最多可以加入 5 个安全组，所以一个实例的每个弹性网卡最多可以包含 500 条安全组规则，能够满足绝大多数场景的需求。
 > 为何实例加入安全组时出现超限提示？
   * `作用于一台实例（主网卡）的安全组规则数量上限` = 该实例允许加入的安全组数量 x 每个安全组最大规则数量。
+3. [ECS安全组中规则的优先级执行匹配顺序说明](https://help.aliyun.com/knowledge_detail/40642.html)
+  * 服务器只有一个安全组
+    * 两条优先级相同的规则，先判断第一条规则是否符合，不符合的情况下再判断是否符合第二条
+    * `优先级数字小的级别高，数字大的级别低`
 ### 10.2.6 网络 
 [BGP机房介绍](https://help.aliyun.com/knowledge_detail/40677.html)
 使用BGP协议互联后，网络运营商的所有骨干路 由设备将会判断到IDC机房IP段的最佳路由，以保证不同网络运营商用户的高速访问
+### 10.2.8 其他
+> [中国大陆用户购买其他国家和地区实例资源 FAQ](https://help.aliyun.com/knowledge_detail/50274.html)
+  * 14. 可否将中国大陆地域的实例迁移到其它国家和地区呢？
+    * `很抱歉，实例的地域和可用区无法变更。如果您需要在其它国家和地区使用实例，您需要重新购买实例`。
 ### 10.2.9 云助手FAQ
 10. 执行记录存在哪些执行状态？
 > 单次命令在一台实例上存在以下4种状态：
@@ -349,3 +393,10 @@ https://help.aliyun.com/document_detail/50511.html
   * 您已经为云盘 创建了快照，而且要回滚的云盘当前没有正在创建的快照。
   * 云盘未被释放。
   * `云盘必须已经 挂载到某台ECS实例上，而且已经 停止实例`。
+# 14 通用参考 
+## 14.1 地域和可用区
+https://help.aliyun.com/document_detail/40654.html
+> 可用区是指`在同一地域内，电力和网络互相独立的物理区域`。同一可用区内实例之间的网络延时更小。
+> `在同一地域内可用区与可用区之间内网互通`，可用区之间能做到故障隔离。是否将实例放在同一可用区内，主要取决于对容灾能力和网络延时的要求。
+  * 如果您的应用需要较高的容灾能力，建议您将实例部署在同一地域的不同可用区内。
+  * 如果您的应用要求实例之间的网络时延较低，则建议您将实例创建在同一可用区内。
