--- a/aliyun/1.云计算acp/2.对象存储OSS.md
+++ b/aliyun/1.云计算acp/2.对象存储OSS.md
@@ -16,8 +16,8 @@ https://help.aliyun.com/document_detail/31819.html
 ## 2.2 计量项和计费项
 https://help.aliyun.com/document_detail/59636.html
 > OSS产品的账单费用由以下四部分组成。其中，数据处理会根据您的使用情况单独计量计费，不使用不计费。
-  1. 存储费用
-  2. 流量费用
+  1. `存储费用`
+  2. `流量费用`
   3. 请求费用
   4. 数据处理费用
 # 3. 快速入门 
@@ -33,11 +33,24 @@ https://help.aliyun.com/document_detail/31827.html
   * 每个用户可以拥有多个存储空间。
   * 存储空间的名称`在 OSS 范围内必须是全局唯一的，一旦创建之后无法修改名称`。
   * 存储空间内部的对象数目没有限制。
+## 4.5 数据容灾 
+### 4.5.1 同城区域冗余存储
+https://help.aliyun.com/document_detail/90589.html
+> OSS采用多可用区（AZ）机制，将用户的数据分散存放在同一地域（Region）的3个可用区。`当某个可用区不可用时，仍然能够保障数据的正常访问`。OSS同城3AZ能够提供99.9999999999%（12个9）的数据可靠性以及99.99%的数据可用性。
 ## 4.6 访问与控制
 ### 4.6.3 绑定自定义域名
 https://help.aliyun.com/document_detail/31836.html
-您的文件上传到OSS后，会自动生该文件的访问地址。您可以使用此地址访问OSS文件。如果您想要通过自定义域名访问OSS文件，需要将自定义域名访问绑定在文件所在的Bucket上，即CNAME。按照中国《互联网管理条例》的要求，所有需要开通这项功能的用户，必须提供工信部备案号，域名持有者身份证等有效资料，经由阿里云审批通过后才可以使用。在开通CNAME功能后，OSS将自动处理对该域名的访问请求。
+> 您的文件上传到OSS后，会自动生该文件的访问地址。您可以使用此地址访问OSS文件。如果您想要通过自定义域名访问OSS文件，需要将自定义域名访问绑定在文件所在的Bucket上，即CNAME。按照中国《互联网管理条例》的要求，所有需要开通这项功能的用户，必须提供工信部备案号，域名持有者身份证等有效资料，经由阿里云审批通过后才可以使用。在开通CNAME功能后，OSS将自动处理对该域名的访问请求。
 ## 4.8 管理存储空间
+### 4.8.1 创建存储空间
+https://help.aliyun.com/document_detail/31842.html
+> 您可以选择在已有的地域创建存储空间。同时需要注意有下列限制：
+  * 同一用户创建的存储空间总数`不能超过 30 个`。
+  * 每个存储空间的名字全局唯一，否则会创建失败。
+  * 存储空间的名称需要符合命名规范。
+  * 存储空间一旦创建成功，`名称和所处地域不能修改`。
+> OSS 提供 ACL（Access Control List）权限控制方法，您可以在创建存储空间的时候设置相应的存储空间权限（ACL），也可以在创建之后修改 ACL。如果不设置 ACL，`默认值为私有读写`。
+
 ### 4.8.4 设置存储空间读写权限（ACL）
 https://help.aliyun.com/document_detail/31843.html
 public-read-write 公共读写
@@ -157,12 +170,14 @@ https://help.aliyun.com/document_detail/44198.html
 * 跨账户的ECS和OSS可以内网互连。
 * 不同地域的ECS与OSS无法通过内网访问。
 ## 12.9  存储空间（bucket）管理
-1. [OSS中可以重命名bucket吗？是否支持object迁移？](https://help.aliyun.com/knowledge_detail/39588.html)
-2. [如何删除bucket](https://help.aliyun.com/knowledge_detail/65468.html)
+> 1. [OSS中可以重命名bucket吗？是否支持object迁移？](https://help.aliyun.com/knowledge_detail/39588.html)
+> 2. [如何删除bucket](https://help.aliyun.com/knowledge_detail/65468.html)
 * 对于空bucket，您可通过控制台右上角的“删除Bucket”或API/SDK的 DeleteBucket 接口直接删除。
 * 对于非空的bucket，您可以使用以下方式删除：
   * 使用oss的生命周期异步删除Object，请参考这里，然后将bucket删除。
   * 直接调用 osscmd 的 deletewholebucket 接口进行删除，请参考这里。注意该命令十分危险，将会删除所有的数据，并且不可恢复。请慎重使用。
+> 3. [OSS可创建Bucket个数限制，容量是否需要扩容？](https://help.aliyun.com/knowledge_detail/65444.html)
+  * 目前，`同一地域下每个账号最多可创建30个Bucket`。Bucket 的容量无上限，且OSS的读写效率不会因为单个目录下存在大量文件而受到影响。
 ## 12.10 文件管理
 https://help.aliyun.com/knowledge_detail/39631.html
 > 批量删除操作
