--- a/aliyun/1.云计算acp/3.弹性伸缩.md
+++ b/aliyun/1.云计算acp/3.弹性伸缩.md
@@ -66,7 +66,7 @@ https://help.aliyun.com/document_detail/25920.html
 https://help.aliyun.com/document_detail/25880.html
 > 伸缩活动
   * 同一伸缩组内、同一时刻只能有一个伸缩活动在执行
-  * 伸缩活动不可以中断
+  * `伸缩活动不可以中断`
   * 伸缩活动有 ECS 实例加入伸缩组失败时，需要保持 ECS 实例级事务的完整性，而非伸缩活动级事务的完整性，即`只进行 ECS 实例级回滚`，而不是伸缩活动级回滚。例如，`当伸缩组创建了 20 台 ECS 实例，但只有 19 台 ECS 实例成功加入负载均衡时，则只对不成功的 1 台 ECS 实例进行自动释放操作`。
 > 冷却时间
   * `在冷却时间内，伸缩组只会拒绝云监控报警任务类型的伸缩活动请求`，其他类型的触发任务（如用户手工执行伸缩规则、定时任务等）可以绕过冷却时间立即执行伸缩活动。
