--- a/aliyun/1.云计算acp/4.负载均衡SLB.md
+++ b/aliyun/1.云计算acp/4.负载均衡SLB.md
@@ -42,6 +42,7 @@ https://help.aliyun.com/document_detail/85943.html
 ## 5.3 健康检查
 ### 5.3.1 健康检查介绍
 https://help.aliyun.com/document_detail/85958.html
+> 如果您的`业务对负载敏感性高，高频率的健康检查探测可能会对正常业务访问造成影响`。您可以结合业务情况，`通过降低健康检查频率、增大健康检查间隔、七层检查修改为四层检查等方式`，来降低对业务的影响。但为了保障业务的持续可用，不建议关闭健康检查。
 > HTTP/HTTPS监听健康检查机制
   * 针对七层（HTTP或HTTPS协议）监听，健康检查通过`HTTP HEAD探测`来获取状态信息，如下图所示。
 > TCP监听健康检查机制
