--- a/aliyun/1.云计算acp/1.云服务器ECS.md
+++ b/aliyun/1.云计算acp/1.云服务器ECS.md
@@ -233,6 +233,9 @@ https://help.aliyun.com/document_detail/54789.html
   * 请勿修改默认登录用户名 root。
 2. [使用实例创建自定义镜像](https://help.aliyun.com/document_detail/35109.html)
 ## 5.9 安全组
+### 5.9.3 安全组默认规则
+https://help.aliyun.com/document_detail/31707.html
+> 默认安全组中的默认规则仅设置针对ICMP协义、SSH 22端口、RDP 3389端口、HTTP 80端口和HTTPS 443端口的入方向规则
 ### 5.9.4 创建安全组
 https://help.aliyun.com/document_detail/25468.html
 * `一台ECS实例必须至少属于一个安全组`。
@@ -303,6 +306,13 @@ https://help.aliyun.com/document_detail/25535.html
 2. [ECS系统盘和数据盘二次分区FAQ](https://help.aliyun.com/knowledge_detail/40566.html)
 > 系统盘能否再次划分出一个分区用作数据存储？
   * 出于系统安全和稳定性考虑，`阿里云官方不支持系统盘二次分区`，不管是Windows还是Linux。`如果用户强行使用第三方工具进行二次分区操作，可能引发未知风险`，如系统崩溃，数据丢失等。
+3. [扩容系统盘FAQ](https://help.aliyun.com/knowledge_detail/40568.html)
+  > 1. 所有块存储都支持系统盘扩容吗？有地域限制吗？
+    * 新购普通云盘、高效云盘、SSD云盘、本地SSD盘等块存储在新购时能选择系统盘的容量。
+    * 存量的普通云盘、高效云盘、SSD云盘作系统盘，更换系统盘时，您能重新选择系统盘的容量。
+    * 所有的地域都支持扩容系统盘。
+  > 8. 系统盘扩容之后是否支持再缩容？
+    * 系统盘扩容之后不支持再缩容。
 ### 10.2.3 快照
 > 1. [快照回滚规则 FAQ](https://help.aliyun.com/knowledge_detail/40576.html)
   * 1. 磁盘无快照是否能够回滚或数据恢复？
