--- a/aliyun/1.云计算acp/2.对象存储OSS.md
+++ b/aliyun/1.云计算acp/2.对象存储OSS.md
@@ -12,6 +12,15 @@
 |安全   |提供多种鉴权和授权机制及白名单、防盗链、主子账号功能。|                                    |
 ## 1.4 使用场景
 https://help.aliyun.com/document_detail/31819.html
+## 1.5 使用限制
+https://help.aliyun.com/document_detail/54464.html
+> 存储空间（bucket）
+  * `同一账号在同一地域内创建的存储空间总数不能超过30个`。
+  * 存储空间一旦创建成功，`其名称、所处地域、存储类型不能修改`。
+  * 单个存储空间的容量不限制。
+> 上传/下载文件
+  * 通过控制台上传、简单上传、表单上传、追加上传的`文件大小不能超过5GB`，要上传大小超过5GB的文件必须使用断点续传方式。
+  * `断点续传方式上传的文件大小不能超过48.8TB`。
 # 2. 产品定价
 ## 2.2 计量项和计费项
 https://help.aliyun.com/document_detail/59636.html
@@ -88,6 +97,15 @@ https://help.aliyun.com/document_detail/32013.html
   * 断点续传上传：支持并发、断点续传、自定义分片大小。大文件上传推荐使用断点续传。`最大不能超过48.8TB`。
   * 分片上传：当文件较大时，可以使用分片上传，`最大不能超过48.8TB`。
 # 7. API 参考 
+## 7.6 关于Object操作
+### 7.6.2 CopyObject
+https://help.aliyun.com/document_detail/31979.html
+> 限制条件
+  * `仅支持小于1GB的文件。如果要拷贝大于1GB的文件，必须使用MultipartUpload操作`
+  * 请求者必须对源Object有读权限。
+  * `源Object和目标Object必须属于同一个地域（数据中心）`。
+  * 不能拷贝通过追加上传方式产生的Object。
+  * 如果源Object为符号链接，只拷贝符号链接，不拷贝符号链接指向的文件内容。
 ## 7.7. 访问控制
 ### 7.7.4 临时授权访问
 https://help.aliyun.com/document_detail/31953.html
@@ -131,12 +149,17 @@ https://help.aliyun.com/document_detail/31916.html
 ## 9.1 快速使用OSS图片服务
 https://help.aliyun.com/document_detail/44686.html
 > 图片处理提供以下功能：
-* 获取图片信息
-* 图片格式转换
-* `图片缩放、裁剪、旋转`
-* `图片添加图片、文字、图文混合水印`
-* 自定义图片处理样式
-* 通过管道顺序调用多种图片处理功能
+  * 获取图片信息
+  * 图片格式转换
+  * `图片缩放、裁剪、旋转`
+  * `图片添加图片、文字、图文混合水印`
+  * 自定义图片处理样式
+  * 通过管道顺序调用多种图片处理功能
+## 9.2 图片处理访问规则
+https://help.aliyun.com/document_detail/44687.html
+> Channel （频道）
+  * `Channel 是 IMG 上的命名空间，也是计费、权限控制、日志记录等高级功能的管理实体`。IMG 名称在整个图片处理服务中具有全局唯一性，且不能修改。`一个用户最多可创建10个 Channel`，但每个 Channel 中存放的 Object 的数量没有限制。
+  * 图片服务的数据中心和 OSS 的数据中心相对应。用户在 OSS 的某个数据中心上创建一个 Bucket，再选择开通图片服务，对应的 Channel 也属于该数据中心。目前 Channel 跟 OSS 的 Bucket 相对应，即用户只能创建与自己在 OSS 上 Bucket 同名的 Channel。
 ## 9.16 老版图片服务手册
 ### 9.16.2 基本概念
 https://help.aliyun.com/document_detail/32207.html
@@ -161,24 +184,41 @@ https://help.aliyun.com/document_detail/44198.html
   * OSS中文件夹的概念仅是一个逻辑概念，在通过API/SDK的方式设置文件夹的时候可以指定object对应的key值包括前面的目录即可实现该功能。例如，定义object的key为abc/1.jpg就会在该bucket下创建一个abc的文件夹，而在文件夹下即会有一个1.jpg的文件。在控制台上也可以通过新建文件夹按钮来创建文件夹。
   * OSS中的文件夹其实是一个大小为0KB的空文件。因此，用户创建一个key值为1/的object就会定义文件夹1；并且如果用户创建文件abc/1.jpg，系统是不会创建abc/这个文件的，因此在删除abc/1.jpg后将不会再存在abc这个文件夹。
 ## 12.3 计量计费
-[云服务器与OSS 上传文件，流量与请求次数是否收费？](https://help.aliyun.com/knowledge_detail/39679.html)
-* 云服务器与OSS之间通过内网地址上传或下载数据，属内网流量，是免费的
-* 云服务器与OSS每次请求所产生的请求次数，不分内外网都会计费。
+> [云服务器与OSS 上传文件，流量与请求次数是否收费？](https://help.aliyun.com/knowledge_detail/39679.html)
+  * 云服务器与OSS之间通过内网地址上传或下载数据，属内网流量，是免费的
+  * 云服务器与OSS每次请求所产生的请求次数，不分内外网都会计费。
+> [OSS最小计费单位是什么](https://help.aliyun.com/knowledge_detail/39684.html)
+  * 存储和流量按实际使用量，`最小计费单位是GB`。请求次数按`PUT型每千次`，`GET型每万次`整数计量计费收费
 ## 12.7 域名/网络
 [ECS用户如何正确使用OSS内网地址](https://help.aliyun.com/knowledge_detail/39584.html)
-* `同地域的ECS可以通过内网访问OSS`。
-* 跨账户的ECS和OSS可以内网互连。
-* 不同地域的ECS与OSS无法通过内网访问。
+  * `同地域的ECS可以通过内网访问OSS`。
+  * 跨账户的ECS和OSS可以内网互连。
+  * 不同地域的ECS与OSS无法通过内网访问。
 ## 12.9  存储空间（bucket）管理
 > 1. [OSS中可以重命名bucket吗？是否支持object迁移？](https://help.aliyun.com/knowledge_detail/39588.html)
 > 2. [如何删除bucket](https://help.aliyun.com/knowledge_detail/65468.html)
-* 对于空bucket，您可通过控制台右上角的“删除Bucket”或API/SDK的 DeleteBucket 接口直接删除。
-* 对于非空的bucket，您可以使用以下方式删除：
-  * 使用oss的生命周期异步删除Object，请参考这里，然后将bucket删除。
-  * 直接调用 osscmd 的 deletewholebucket 接口进行删除，请参考这里。注意该命令十分危险，将会删除所有的数据，并且不可恢复。请慎重使用。
+  * 对于空bucket，您可通过控制台右上角的“删除Bucket”或API/SDK的 DeleteBucket 接口直接删除。
+  * 对于非空的bucket，您可以使用以下方式删除：
+    * 使用oss的生命周期异步删除Object，请参考这里，然后将bucket删除。
+    * 直接调用 osscmd 的 deletewholebucket 接口进行删除，请参考这里。注意该命令十分危险，将会删除所有的数据，并且不可恢复。请慎重使用。
 > 3. [OSS可创建Bucket个数限制，容量是否需要扩容？](https://help.aliyun.com/knowledge_detail/65444.html)
   * 目前，`同一地域下每个账号最多可创建30个Bucket`。Bucket 的容量无上限，且OSS的读写效率不会因为单个目录下存在大量文件而受到影响。
-## 12.10 文件管理
+> 4. [OSS的object,文件夹,bucket命名规范汇总](https://help.aliyun.com/knowledge_detail/39668.html)
+  * 文件夹命名规范：
+    1. 只能包含字母，数字，中文，下划线（_）和短横线（-）,小数点（.）
+    2. 只能以字母、数字或者中文开头
+    3. 文件夹的长度限制在1-254之间
+    4. Object总长度必须在1-1023之间
+  * Bucket命名规范：
+    1. 只能包含小写字母，数字和短横线
+    2. 必须以小写字母和数字开头和结尾
+    3. bucketName的长度限制在3-63之间
+  * Object命名规范：
+    1. 使用UTF-8编码
+    2. 长度必须在1-1023字节之间
+    3. 不能以“/”或者“\”字符开头
+    4. `不能含有“\r”或者“\n”的换行符`
+## 12.10 文件(Object)管理
 https://help.aliyun.com/knowledge_detail/39631.html
 > 批量删除操作
   * 您可以使用以下几种方法，批量删除文件（包括文件夹及子目录文件）
@@ -187,3 +227,15 @@ https://help.aliyun.com/knowledge_detail/39631.html
       * 您可以使用控制台，勾选文件夹或勾选多个文件，批量删除文件或文件夹
       * 您可以使用控制台的碎片管理功能，批量删除碎片
     * OSS SDK：使用OSS SDK中的批量删除接口（如JAVA SDK中OSSClient.deleteObjects），您可以参考SDK文档
+## 12.11 签名
+https://help.aliyun.com/knowledge_detail/39530.html
+> 出于安全考虑，目前控制台针对私有bucket的获取URL链接签名操作做了优化，使用的AccessKey是临时生成的密钥对，`主账号用户最长有效时间是64800秒（18小时），RAM子账号用户以及sts用户最长有效时间是3600秒（1小时），超时后链接就无法访问了`。
+## 12.13 图片处理
+https://help.aliyun.com/knowledge_detail/39591.html
+> 这三种错误的含义与解决方法如下：
+  1. NoSuchStyle：`使用规则名错误`
+    * 错误原因是由于test这个规则名没有在OSS图片处理服务中定义，如下图所示，必须定义后才能引用。
+  2. NoSuchKey：`没有该object文件`
+    * 错误原因是qiaos/111111.jpg这个文件在didu的bucket中不存在（可以理解为用户控制台didu的bucket下没有创建qiaos目录或者qiaos目录下没有11111.jpg这个文件）。
+  3. NoSuchFile：`使用参数名错误`
+    * 错误原因为100w这个图片样式没有在OSS图片处理服务中定义，如下图所示，必须定义后才能引用。
