--- a/aliyun/1.云计算acp/3.弹性伸缩.md
+++ b/aliyun/1.云计算acp/3.弹性伸缩.md
@@ -53,6 +53,10 @@ https://help.aliyun.com/document_detail/25858.html
   * 云监控报警任务独立于伸缩组存在，不依赖伸缩组的生命周期管理，删除伸缩组不会删除报警任务。
 # 4. 用户指南
 ## 4.1 使用须知
+### 4.1.3 伸缩组状态
+https://help.aliyun.com/document_detail/25913.html
+> 伸缩组具有以下三种状态：Active、Inacitve 和 Deleting。
+
 ### 4.1.10 数量限制
 https://help.aliyun.com/document_detail/25920.html
 * `一个账号下最多创建 20 个伸缩组`。
@@ -89,7 +93,39 @@ https://help.aliyun.com/document_detail/25904.html
 https://help.aliyun.com/document_detail/74853.html
 https://bbs.aliyun.com/read/557206.html
 * 根据传入参数创建报警任务。`报警任务名称在用户账号下唯一。如果该报警任务名称已经存在，则用新的值进行替换`。
-# 6. 开发指南
+# 6. API参考
+## 6.7 伸缩组
+### 6.7.2 修改伸缩组
+https://help.aliyun.com/document_detail/25937.html
+> 修改伸缩组的属性。创建伸缩组的属性中，有以下属性不可修改：
+  * RegionId
+  * LoadBalancerId
+  * DBInstanceId
+> 当伸缩组为 `active 或 inactive` 状态，才可以调用该接口。
+### 6.7.3 启用伸缩组
+https://help.aliyun.com/document_detail/25939.html
+> 启用一个指定的伸缩组。
+  * 启用伸缩组成功以后（active 状态），会先把接口中指定的 ECS 实例加入伸缩组。
+  * 接口中指定的 ECS 实例成功加入伸缩组后，`如果当前 ECS 实例数量仍小于 MinSize，则弹性伸缩服务会自动创建差额的按量付费的 ECS 实例`
+    * 例：创建伸缩组时，指定 MinSize = 5，在启用伸缩组的 InstanceId.N 参数中指定 2 台已有 ECS 实例，则弹性伸缩在加入 2 台已有 ECS 实例之后，再自动创建 3 台 ECS 实例。
+> 当伸缩组为 `Inactive` 状态，才可以调用该接口。
+> 当伸缩组没有生效的伸缩配置时，启动伸缩组时需要传入伸缩配置。
+  * 一个伸缩组在同一时刻只能有一个 生效 的伸缩配置。
+  * 如果启动伸缩组之前已经有生效的伸缩配置，在此接口传入新的生效伸缩配置后，原有的伸缩配置会失效。
+> 加入的 ECS 实例的限定条件：
+  * `加入的 ECS 实例必须与伸缩组在同一个地域`。
+  * 加入的 ECS 实例的规格（InstanceType）必须与生效伸缩配置的`实例规格完全一致`。
+  * 加入的 ECS 实例必须是 `running` 状态。
+  * 加入的 ECS 实例`不能已加入到其它伸缩组`中。
+  * 加入的 ECS 实例支持包年包月和按量付费两种类型。
+  * 如果伸缩组指定 VswitchID，则不支持 Classic 类型的 ECS 实例加入伸缩组，也不支持其他 VPC 的 ECS 实例加入伸缩组。
+  * 如果伸缩组没有指定 VswitchID，则不支持 VPC 类型的 ECS 实例加入伸缩组。
+  * 如果该接口指定的实例数加上当前伸缩组的实例数（Total Capactiy）大于 MaxSize 时，则调用失败。
+### 6.7.4 停用伸缩组
+https://help.aliyun.com/document_detail/25940.html
+> 停用一个指定的伸缩组。
+  * 停用伸缩组之前发生的伸缩活动，会继续完成，而之后触发的伸缩活动会直接拒绝。
+  * `当伸缩组为Active状态`，才可以调用该接口。
 ## 6.10 触发任务
 ### 6.10.2 添加ECS实例
 https://help.aliyun.com/document_detail/25954.html
