--- a/aliyun/1.云计算acp/4.负载均衡SLB.md
+++ b/aliyun/1.云计算acp/4.负载均衡SLB.md
@@ -44,7 +44,7 @@ https://help.aliyun.com/document_detail/85943.html
 https://help.aliyun.com/document_detail/85958.html
 > 如果您的`业务对负载敏感性高，高频率的健康检查探测可能会对正常业务访问造成影响`。您可以结合业务情况，`通过降低健康检查频率、增大健康检查间隔、七层检查修改为四层检查等方式`，来降低对业务的影响。但为了保障业务的持续可用，不建议关闭健康检查。
 > HTTP/HTTPS监听健康检查机制
-  * 针对七层（HTTP或HTTPS协议）监听，健康检查通过`HTTP HEAD探测`来获取状态信息，如下图所示。
+  * 针对七层（HTTP或HTTPS协议）监听，健康检查通过`HTTP HEAD探测`来获取状态信息。
 > TCP监听健康检查机制
   * 针对四层TCP监听，为了提高健康检查效率，健康检查通过定制的`TCP探测`来获取状态信息
 > UDP监听的检查机制如下：
@@ -104,13 +104,33 @@ https://help.aliyun.com/document_detail/27635.html
   * normal：后端服务器健康。
   * abnormal：后端服务器不健康。
   * `unavailable`：未完成健康检查。
+# 7 产品限制
+## 7.1 使用限制
+https://help.aliyun.com/document_detail/32459.html
+> SLB实例限制
+  * 一个账号可创建的SLB实例数量	60
+  * 一个ECS实例可关联SLB的次数	50
+  * 一个SLB实例可添加的后端服务器数量	200
+  * `一个SLB实例可添加的监听数量`	50
+  * 一个HTTP/HTTPS监听可添加的域名和URL转发规则数量	40
+  * 一个HTTPS监听可创建的扩展域名数量	3
+  * 一个AccessKey的API访问频率限制	5000次/天
+  * SLB实例监听可选择的前端/后端端口范围（公共云）	1-65535
+  * SLB实例监听可选择的前端/后端端口范围（金融云）	80/443/2800-3300/5000-10000/13000-14000
+> 证书限制
+  * 每个地域可上传的服务器证书数量	100
+  * 每个地域可上传的客户端CA证书数量	100
+> 访问控制策略组限制
+  * 每个地域可创建的访问策略控制组数量	50
+  * 一个访问控制策略组可添加的访问控制条目数量	300
+  * 一次API调用可在访问控制策略组中添加的IP条目数	50
+  * 一个访问控制策略组可以被关联到监听的次数	50
 # 8 扩展阅读
 ## 8.1 最佳实践
 ### 8.1.3 配置服务器Cookie
 https://help.aliyun.com/document_detail/27704.html
 > 负载均衡服务提供会话保持功能。开启会话保持功能后，负载均衡会将会话期间内来自同一客户端的访问请求分发到同一台后端服务器上进行处理。
-  * 四层监听的会话保持是`基于IP地址`的会话保持，负载均衡监听器会将来自同一IP地址的请求转发到同一个后端ECS上；
-  * 而七层监听是`基于Cookie`的会话保持。
+  * 四层监听的会话保持是`基于IP地址`的会话保持，负载均衡监听器会将来自同一IP地址的请求转发到同一个后端ECS上；而七层监听是`基于Cookie`的会话保持。
 ### 8.1.4 获取客户端真实IP
 https://help.aliyun.com/document_detail/54007.html
 > 负载均衡提供获取客户端真实IP地址的功能，该功能默认是开启的。
