--- a/aliyun/1.云计算acp/2.对象存储OSS.md
+++ b/aliyun/1.云计算acp/2.对象存储OSS.md
@@ -78,6 +78,10 @@ https://help.aliyun.com/document_detail/31861.html
 * `由于OSS不提供重命名功能`，因此如果需要对Object进行重命名的话，最佳的方法就是调用OSS的CopyObject接口先将原来的数据拷贝成新的文件名，然后删除原Object
 # 5. 最佳实践
 ## 5.8 存储空间管理
+### 5.8.2 跨域资源共享（CORS）
+https://help.aliyun.com/document_detail/31928.html
+> OSS提供了CORS规则的配置从而根据需求允许或者拒绝相应的跨域请求。`该规则是配置在Bucket级别的`。
+
 ### 5.8.4 防盗链
 https://help.aliyun.com/document_detail/31937.html
 > 目前OSS提供的防盗链方法主要有以下两种：
@@ -133,7 +137,7 @@ https://help.aliyun.com/document_detail/31901.html
 https://help.aliyun.com/document_detail/31902.html
 > 说明
   * 您绑定的域名需在`工信部备案`，否则域名访问将会受到影响。
-  * 每个存储空间最多可以绑定20个域名。
+  * 每个存储空间`最多可以绑定20个域名`。
 ## 8.5 管理文件
 ### 8.5.1 文件概览
 https://help.aliyun.com/document_detail/31908.html
