--- a/aliyun/1.云计算acp/4.负载均衡SLB.md
+++ b/aliyun/1.云计算acp/4.负载均衡SLB.md
@@ -22,6 +22,11 @@ https://help.aliyun.com/document_detail/32460.html
   * 加权轮询（WRR）
   * 加权最小连接数（WLC）
   * 一致性哈希（CH）调度算法。
+# 3. 产品定价 
+## 3.2 按量计费
+https://help.aliyun.com/document_detail/27692.html
+> 带宽费 = 当日带宽峰值（元/小时）× 使用时长
+  * 按带宽计费的公网SLB实例按小时计费，以日结算。`使用时间不足一小时，按一小时计算。运行未满一日，按照当日实际使用小时数乘以当日开通的最高带宽单价计算`。
 # 5. 用户指南
 ## 5.2 监听
 ### 5.2.2 添加UDP监听
@@ -118,7 +123,7 @@ https://help.aliyun.com/document_detail/32459.html
   * SLB实例监听可选择的前端/后端端口范围（公共云）	1-65535
   * SLB实例监听可选择的前端/后端端口范围（金融云）	80/443/2800-3300/5000-10000/13000-14000
 > 证书限制
-  * 每个地域可上传的服务器证书数量	100
+  * `每个地域可上传的服务器证书数量`	100
   * 每个地域可上传的客户端CA证书数量	100
 > 访问控制策略组限制
   * 每个地域可创建的访问策略控制组数量	50
