--- a/aliyun/1.云计算acp/3.弹性伸缩.md
+++ b/aliyun/1.云计算acp/3.弹性伸缩.md
@@ -59,13 +59,14 @@ https://help.aliyun.com/document_detail/25913.html
 
 ### 4.1.10 数量限制
 https://help.aliyun.com/document_detail/25920.html
-* `一个账号下最多创建 20 个伸缩组`。
-* `一个伸缩组内最多创建 10 个伸缩配置`。
-* 一个伸缩组内最多创建 50 个伸缩规则。
-* 一个伸缩组内最多创建 6 个事件通知。
-* 一个伸缩组内最多创建 6 个生命周期挂钩。
-* 对于所有地域和所有伸缩组，`一个账号下最多弹性伸缩 1000 台 ECS 实例`。此数量只包含自动创建的 ECS 实例，不包含手动添加的 ECS 实例。
-* 一个账号下最多创建 20 个定时任务。
+> 弹性伸缩服务的功能项存在以下数量限制
+  * `一个账号下最多创建 20 个伸缩组`。
+  * `一个伸缩组内最多创建 10 个伸缩配置`。
+  * 一个伸缩组内最多创建 50 个伸缩规则。
+  * 一个伸缩组内最多创建 6 个事件通知。
+  * 一个伸缩组内最多创建 6 个生命周期挂钩。
+  * 对于所有地域和所有伸缩组，`一个账号下最多弹性伸缩 1000 台 ECS 实例`。此数量只包含自动创建的 ECS 实例，不包含手动添加的 ECS 实例。
+  * 一个账号下最多创建 20 个定时任务。
 ### 4.1.11 注意事项
 https://help.aliyun.com/document_detail/25880.html
 > 伸缩活动
